--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Analizador y detector de imágenes indeseadas e inapropiadas.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/Felimir/undesired-detector/issues"
   },
-  "homepage": "https://github.com/Felimir/undesired-detector#readme"
+  "homepage": "https://github.com/Felimir/undesired-detector#readme",
+  "devDependencies": {
+    "standard-version": "^9.0.0"
+  }
 }
